--- a/new_app/private/views/_layouts/main.html
+++ b/new_app/private/views/_layouts/main.html
@@ -4,13 +4,11 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 
     <title>{%output.title}</title>
-	<meta name="description" content="">
-	<meta name="author" content="Juan Pablo Marzetti">
 
 	<meta name="viewport" content="width=device-width,initial-scale=1">
 
-    {%$this->htmlRenderStylesheets()}
-    {%$this->htmlRenderJavascripts()}
+    {%stylesheet_tag('application.css')}
+    {%javascript_tag('application.js')}
 </head>
 <body>
     {%main}
